--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
-
 .App {
   text-align: center;
 }
 
+.dark {
+  background-color: rgb(34, 34, 34);
+  color: white;
+  z-index: 0;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+}
 
-
+.light {
+  background-color: white;
+  z-index: 0;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+}
